# zeni

./: AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  keni.code-workspace  template.toml  zeni.code-workspace
backend/: .env.example  AGENTS.md  Dockerfile  README.md  main.py  pyproject.toml
backend/.roo/rules-architect/: AGENTS.md
backend/.roo/rules-ask/: AGENTS.md
backend/.roo/rules-code/: AGENTS.md
backend/.roo/rules-debug/: AGENTS.md
backend/.serena/: project.yml
backend/app/: config.py  mcp_server.py
backend/app/models/: __init__.py  ai_provider.py  api_token.py  budget.py  category.py  expense.py  oauth_authorization_code.py  oauth_client.py  oauth_token.py  recurring.py  tag.py  transaction.py  user.py  wallet.py
backend/app/providers/: anthropic.py  base.py  gemini.py  openai_compat.py
backend/app/routers/: __init__.py  ai_provider.py  auth.py  budgets.py  categories.py  expenses.py  export.py  oauth.py  recurring.py  transactions.py  users.py  wallets.py
backend/app/schemas/: ai_provider.py  auth.py  category.py  expense.py  recurring.py  transaction.py  wallet.py
backend/app/services/: ai_chat.py  ai_expense.py  ai_transaction.py  category_tag.py  mcp_oauth_provider.py  ocr.py  recurring.py  scheduler.py
backend/migrations/versions/: 20260403_1633_timezone_aware_datetimes.py  20260404_1414_wallet_cascade_deletes.py  20260412_1002_ce90f9fda434.py  (+8 more)
backend/plans/: ai-recurring.md  ai-suggest-category-tags.md  frontend-multiple-expenses-and-groups.md  income-support.md  multiple-expenses-and-groups.md  product-brief.md
(+65 files in other folders)
